Changes to inviation process